call api user sevice

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <!-- <app-datail-product></app-datail-product> -->
   <!-- <app-order></app-order> -->
   <!-- <app-order-confirm></app-order-confirm> -->
-  <!-- <app-login></app-login> -->
-  <app-register></app-register>
+  <app-login></app-login>
+  <!-- <app-register></app-register> -->
 </body>
 </html>
