--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
 </style>
 <body>
   <!-- <app-root></app-root> -->
-  <app-home></app-home>
+  <!-- <app-home></app-home> -->
   <!-- <app-datail-product></app-datail-product> -->
   <!-- <app-order></app-order> -->
-  <!-- <app-order-confirm></app-order-confirm> -->
+  <app-order-confirm></app-order-confirm>
   <!-- <app-login></app-login> -->
   <!-- <app-register></app-register> -->
 </body>
